Add mailer, test and deployment script

--- a/app/views/product_mailer/in_stock.html.erb
+++ b/app/views/product_mailer/in_stock.html.erb
@@ -1,5 +1,7 @@
 <h1>Product#in_stock</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/product_mailer/in_stock.html.erb
+  <%=link_to @product.name, product_url(@product)%> is back in stock.
 </p>
+
+Unsubscribe: <%= unsubscribe_url(token: params[:subscriber].generate_token_for(:unsubscribe)) %>
