--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,15 +1,20 @@
 <!-- product with Cache -->
-<%= image_tag @product.featured_image if @product.featured_image.attached? %>
-<% cache @product do %>
-    <h1><%= @product.name %></h1>
-    <%= @product.description %>
-<% end %>
+<p><%link_to "Back", products_path%> </p>
+<section class="product">
+    <%= image_tag @product.featured_image if @product.featured_image.attached? %>
+    <section class="product_info">
+        <% cache @product do %>
+            <h1><%= @product.name %></h1>
+            <%= @product.description %>
+        <% end %>
 
-<%= render "inventory", product: @product %>
+        <%= render "inventory", product: @product %>
 
-<%= link_to "Back", products_path %>
+        <%= link_to "Back", products_path %>
 
-<% if authenticated? %>
-    <%= link_to "Edit", edit_product_path(@product) %>
-    <%= button_to "Delete", @product, method: :delete, data: { turbo_confirm: "Are you sure?" }%>
-<% end %>
+        <% if authenticated? %>
+            <%= link_to "Edit", edit_product_path(@product) %>
+            <%= button_to "Delete", @product, method: :delete, data: { turbo_confirm: "Are you sure?" }%>
+        <% end %>
+    </section>
+</section>
